# armando_bossio_proyecto1

./: README.md  pyproject.toml
Codigo/: cargar_base.ipynb
